--- a/tekfys.ipynb
+++ b/tekfys.ipynb
@@ -144,6 +144,35 @@
     "            step = [w[0][i]+deriv[0], w[1][i]+deriv[1]]\n",
     "            w = np.concatenate((w, np.array([step[0], step[1]])), axis = 1) # Beregner ett steg med Eulers metode\n",
     "        \n",
+    "    return w, t\n",
+    "\n",
+    "def rk4_method(w0, T_start, T_slutt, h_step, stegfunk = w_deriv_1):\n",
+    "    \"\"\"\n",
+    "    Beregner utslagsvinkelen theta og vinkelhastigheten omega utfra initialverdiene og til T sekunder\n",
+    "\n",
+    "    theta_0: utslagsvinkel ved start\n",
+    "    omega_0: vinkelhastighet ved start\n",
+    "    dt: tidssteg\n",
+    "    \"\"\"\n",
+    "    dT = T_slutt - T_start\n",
+    "    n = int(dT//h_step)        # Antall steg\n",
+    "    last_step = T_slutt-n*h_step\n",
+    "    w = np.array(([[], []]), dtype = '<f')\n",
+    "    t = np.linspace(T_start, T_slutt-last_step, n + 1)\n",
+    "    t = np.append(t, [float(T_slutt)])\n",
+    "    w = np.concatenate((w, w0), axis = 1)\n",
+    "    for i in range(n+1):           # for-loop over alle verdier f.o.m. 0, til n\n",
+    "        if i == n:\n",
+    "            h_step = last_step\n",
+    "            deriv = rk4(t[i], [w[0][i], w[1][i]], h_step, stegfunk(t[i], [w[0][i], w[1][i]]))\n",
+    "            step = [w[0][i]+deriv[0], w[1][i]+deriv[1]]\n",
+    "            w = np.concatenate((w, np.array([step[0], step[1]])), axis = 1)\n",
+    "            # Passer på at vi alltid avslutter på nøyaktig t = T_slutt\n",
+    "        else:\n",
+    "            deriv = rk4(t[i], [w[0][i], w[1][i]], h_step, stegfunk(t[i], [w[0][i], w[1][i]]))\n",
+    "            step = [w[0][i]+deriv[0], w[1][i]+deriv[1]]\n",
+    "            w = np.concatenate((w, np.array([step[0], step[1]])), axis = 1) # Beregner ett steg med RK4 metode\n",
+    "        \n",
     "    return w, t"
    ]
   },
