--- a/tekfys.ipynb
+++ b/tekfys.ipynb
@@ -4,11 +4,14 @@
    "cell_type": "markdown",
    "id": "d7393a22",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Prosjekt i teknisk fysikk\n",
+    "Ved å bruke en skipsmodell og studere faktorene som påvirker dynamikken til skipet så kan man lære om skipets stabilitetsegenskaper altså hvor mye skipet kan gynge før det velter. Bevegelseslikningene newtons andre lov for tyngdepunkt- og rotasjonsbevegelse beskriver skipets dynamikk. Kreftene som virker på skipet er hovedsaklig kontaktkrefter fra vannet på skipet. Oppdriften avhenger av arealet av vannet skipet er i kontakt med, som i første del antas å være konstant mens i andre del varierer den avhengig av sektorvinkelen, gamma, som igjen avhenger av utslagsvinkelen, theta, som er vinkelen fra likevektsposisjon .  I oppgaven er det hovedsaklig 4. ordens Runge Kutta som er brukt brukt til å løse differensiallikningene numerisk, men også eulers metode."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 4,
    "id": "a2bec188",
    "metadata": {},
    "outputs": [],
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 5,
    "id": "e62beae5",
    "metadata": {},
    "outputs": [
@@ -87,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 6,
    "id": "39420cd1",
    "metadata": {},
    "outputs": [],
@@ -183,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 7,
    "id": "47ffc25d",
    "metadata": {},
    "outputs": [
@@ -304,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 8,
    "id": "e51a96b7",
    "metadata": {},
    "outputs": [
@@ -403,18 +406,28 @@
    "source": [
     "I oppgave 2a-b er dreiemomentet:\n",
     "$\\\\ \\Sigma \\tau = -A \\sigma_0 g h \\sin(\\theta(t))$ $ \\\\A= \\frac12 R^{2}\\left(\\gamma -sin{(\\gamma)}\\right) $  og derfor gir (13):\n",
-    "$\\frac{d\\omega}{dt} = \\frac{-F_B h \\sin(\\theta(t))}{I_c} $\n",
+    "$\\frac{d\\omega}{dt} = \\frac{-A \\sigma_0 \\sin(\\theta(t))}{I_c} $\n",
     "$\n",
     "\\\\ \\frac{d\\vec w}{dt}(t) = \\vec{f}(t,\\vec{w}) = \n",
     "\\left( \\begin{array}{c} w_2 \\\\ \\frac{-A \\sigma_0 g h \\sin(w_1)}{I_c} \\end{array} \\right) =\n",
     "\\left( \\begin{array}{c} \\omega(t) \\\\ \\frac{-A \\sigma_0 g h \\sin(\\theta(t))}{I_c} \\end{array} \\right)\n",
     "$\n",
-    "Vi har kombinert funksjonaliteten til oppgavene 2a-e i samme funksjon, definert nedenfor."
+    "Vi har kombinert funksjonaliteten til oppgavene 2a-e i samme funksjon, definert nedenfor.\n",
+    "\n",
+    "I oppgave 2d-e er dreiemomentet:\n",
+    "$\\\\ \\Sigma \\tau = -A \\sigma_0 g h \\sin(\\theta(t)) -m_L gh*cos(\\theta)*s_L$  og derfor gir (13):\n",
+    "$\\frac{d\\omega}{dt} = \\left(-A \\sigma_0 g h \\sin(\\theta(t)) -m_L gh*cos(\\theta)*s_L\\right) \\frac1{I_c} $\n",
+    "$\n",
+    "\\\\ \\frac{d\\vec w}{dt}(t) = \\vec{f}(t,\\vec{w}) = \n",
+    "\\left( \\begin{array}{c} \\omega(t) \\\\ \\left(-A \\sigma_0 g h \\sin(\\theta(t)) -m_L gh*cos(\\theta)*s_L\\right) \\frac1{I_c} \\end{array} \\right)\n",
+    "$\n",
+    "\n",
+    "I deloppgavene med last inkluderer vi også lastens påvirkning på skipet med bevegelsesligninger for skipets massesenter i $x$ og $y$ retning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 9,
    "id": "badbf43c",
    "metadata": {},
    "outputs": [],
@@ -515,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 12,
    "id": "84d1306f",
    "metadata": {},
    "outputs": [
@@ -563,7 +576,7 @@
     "\n",
     "w0 = np.array([[vinkel*np.pi/180],[0]])\n",
     "w_1d, t_1d = rk4_method(w0, 0, 20, h_step)\n",
-    "w_2b, t_2b, sL, xC, yC = rk4_method_full(w0, 0, 20, h_step, beta, kantring=False)\n",
+    "w_2b, t_2b, sL, xC, yC = rk4_method_last(w0, 0, 20, h_step, beta, 0, kantring=False)\n",
     "\n",
     "plt.plot(t_1d, w_1d[0]*180/np.pi, label='konstant oppdrift')\n",
     "plt.plot(t_2b, w_2b[0]*180/np.pi, label='varierende oppdrift')\n",
@@ -582,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 13,
    "id": "5a1d8017",
    "metadata": {
     "scrolled": false
@@ -719,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 14,
    "id": "c9701d0a",
    "metadata": {},
    "outputs": [
@@ -816,8 +829,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "553cb17f",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 15,
    "id": "68a4da7f",
    "metadata": {},
    "outputs": [],
@@ -925,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 16,
    "id": "e13f95c1",
    "metadata": {
     "scrolled": false
@@ -1038,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 17,
    "id": "cd5c9fcc",
    "metadata": {},
    "outputs": [
@@ -1112,16 +1131,164 @@
    "id": "d3c45346",
    "metadata": {},
    "source": [
-    "Skriv noe om svevning og si noe annet enn bare at det er kult\n",
-    "f.eks. går y-posisjonen til massesenteret over likevektsposisjonen (yC0 = -0.204) når bevegelsen er \"villest\", dvs. når $y_C$ og $\\theta$ varierer mest. $x_C$ drifter litt til høyre side, vet ikke hvorfor, antar det er pga. vinden starter med å blåse båten i positiv x-retning (noe den gjør), det er $\\it ikke$ grunnet hvilken retning båten har akselerasjon ved start $\\left(\\omega_0\\right)$.\n",
-    "Svevningen består av en bølge som har periode på 150s (de store klumpene), og en mindre en med periode på ca. 6s de små oscillasjonene (ikke helt sikker på svevningen, les deg opp).\n",
-    "Tror også vi ser at bølgene (de to som fører til svevning) sakte går ut av fase (spesielt ved $y_C$, se på at bølgene blir \"smurt ut\" mer over tid), men etter lang nok tid burde de komme tilbake til slik det ser ut ved start, om friksjonen og vinden er balansert."
+    "Y-posisjonen til massesenteret går over likevektsposisjonen (yC0 = -0.204) når bevegelsen er \"villest\", dvs. når $y_C$ og $\\theta$ varierer mest. $x_C$ drifter litt til høyre side, vet ikke hvorfor, antar det er pga. vinden starter med å blåse båten i positiv x-retning (noe den gjør), det er $\\it ikke$ grunnet hvilken retning båten har akselerasjon ved start $\\left(\\omega_0\\right)$.\n",
+    "Svevningen består av en bølge som har periode på ca. 150s (de store klumpene), og en mindre en med periode på ca. 6s de små oscillasjonene.\n",
+    "Vi ser at bølgene (de to som fører til svevning) sakte går ut av fase (spesielt ved $y_C$, se på at bølgene blir \"smurt ut\" mer over tid), men etter lang nok tid burde de komme tilbake til slik det ser ut ved start, om friksjonen og vinden er balansert."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "eeddff7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def w_deriv_full(ti, w, vx, xC, vy, yC, dyC, mL, sL, vL, kf, F0, omegaw, beta_full, h_step): # Dette er f fra 2d\n",
+    "    dt = h_step # tidssteg\n",
+    "    theta = w[0]\n",
+    "    gamma = 2*np.arccos(np.cos(beta_full/2)-4/(3*np.pi)*(1-np.cos(theta))+dyC/R)\n",
+    "    A = R**2/2*(gamma-np.sin(gamma))\n",
+    "    friction = -kf*R*gamma*w[1] # friksjonskraften\n",
+    "    wind = F0*np.cos(omegaw*ti) # kraften fra vind og bølger\n",
+    "    vx += (mL*g*np.cos(theta)*np.sin(theta)+wind+friction)*dt/mtot\n",
+    "    xC_new = xC + vx*dt\n",
+    "    vy += (A*sigma0*g -m*g -mL*g*(np.cos(theta))**2)*dt/mtot\n",
+    "    yC_new = yC + vy*dt # Skipets nye x og y koordinater\n",
+    "    vL += -g*np.sin(theta)*dt\n",
+    "    sL += vL*dt # Finner lastens avstand fra metasenteret\n",
+    "    domega = (-A*sigma0*g*h*np.sin(theta)-mL*g*np.cos(theta)*sL +friction*(yC-(R*(np.cos(gamma/2)-1))) +wind*yC)/IC\n",
+    "    dw = np.array([[w[1]], [domega]])\n",
+    "    return dw, vx, xC_new, vy, yC_new, sL, vL\n",
+    "\n",
+    "def bogshamp(w0, T_start, T_slutt, h0, tol, beta_full, kf=0, F0=0, omegaw=0, mL=0, sL = 0, vL=0, vx=0, \n",
+    "                    vy=0, xC = 0, f = w_deriv_full, gjerde = False, kantring = True):\n",
+    "    P=0.9\n",
+    "    h_size=h0\n",
+    "    k=0\n",
+    "    fevals=0\n",
+    "    rejects=0\n",
+    "    T=np.array([T_start])\n",
+    "    yM0 = R*np.cos(beta_full/2) # skipets metasenter\n",
+    "    yC0 = yM0-h # Høyden til massesenteret ved likevekt\n",
+    "    w = np.array(([[], []]), dtype = '<f')\n",
+    "    w = np.concatenate((w, w0), axis = 1)\n",
+    "    sL_list = np.array([sL])\n",
+    "    yC = yC0\n",
+    "    dyC = yC - yC0\n",
+    "    xC_list, yC_list = np.array([xC]), np.array([yC])\n",
+    "    F1 = f(T[k], [w[0][k], w[1][k]], vx, xC, vy, yC, dyC, mL, sL, vL, \n",
+    "                                      kf, F0, omegaw, beta_full, h0)[0]\n",
+    "\n",
+    "    while T_slutt-T[k]>0:\n",
+    "        fevals+=1\n",
+    "        h_size=min(h_size,T_slutt-T[k])\n",
+    "  \n",
+    "        F2 = f(T[k]+0.5*h_size,[w[0][k]+0.5*h_size*F1[0][0], w[1][k]+0.5*h_size*F1[1][0]], vx, xC, vy, yC, dyC, mL, sL, vL, \n",
+    "                                      kf, F0, omegaw, beta_full, h_size)[0]\n",
+    "        F3 = f(T[k]+0.75*h_size,[w[0][k]+0.75*h_size*F2[0][0], w[1][k]+0.75*h_size*F2[1][0]], vx, xC, vy, yC, dyC, mL, sL, vL, \n",
+    "                                      kf, F0, omegaw, beta_full, h_size)[0]\n",
+    "        y1=np.array([[w[0][k]+ 1./9.*h_size*(2.*F1[0][0] + 3.*F2[0][0] + 4.*F3[0][0])], \n",
+    "                     [w[1][k]+ 1./9.*h_size*(2.*F1[1][0] + 3.*F2[1][0] + 4.*F3[1][0])]])\n",
+    "        F4 = f(T[k]+h_size,y1, vx, xC, vy, yC, dyC, mL, sL, vL, \n",
+    "                                      kf, F0, omegaw, beta_full, h_size)[0]\n",
+    "        fevals+=3\n",
+    "        y1h = np.array([[w[0][k]+h_size/24*(7.*F1[0][0] + 6.*F2[0][0] + 8.*F3[0][0] + 3.*F4[0][0])], \n",
+    "                        [w[1][k]+ h_size/24*(7.*F1[1][0] + 6.*F2[1][0] + 8.*F3[1][0] + 3.*F4[1][0])]])\n",
+    "        \n",
+    "        normest = np.linalg.norm(y1h-y1)\n",
+    "        if normest < tol:\n",
+    "            F1=F4\n",
+    "            T=np.append(T,T[k]+h_size)\n",
+    "            # Om skrittet er lite nok kjører vi resten av koden\n",
+    "            dyC = yC - yC0\n",
+    "            vx_prev, vy_prev, xC_prev, yC_prev = vx, vy, xC, yC\n",
+    "            _, vx, xC, vy, yC, sL, vL = f(T[k], [w[0][k], w[1][k]], vx, xC, vy, yC, dyC, mL, sL, vL, \n",
+    "                                          kf, F0, omegaw, beta_full, h_size)\n",
+    "            sL_list = np.append(sL_list, [sL])\n",
+    "            if abs(sL)>R: # Sjekker om lasten er på bord\n",
+    "                if gjerde:\n",
+    "                    sL = np.sign(sL_list[-1])*R\n",
+    "                    sL_list[-1] = sL\n",
+    "                    vL = 0\n",
+    "                    _, vx, xC, vy, yC, _, _ = f(T[k], [w[0][k], w[1][k]], vx_prev, xC_prev, vy_prev, yC_prev,\n",
+    "                                            dyC, mL, sL, vL, kf, F0, omegaw, beta_full, h_size)\n",
+    "                else:\n",
+    "                    mL = 0\n",
+    "                    IC = 1/2*m*R**2*(1-32/(9*np.pi**2))\n",
+    "                    FG = -m*g\n",
+    "                    beta_full=beta\n",
+    "                    yM0 = R*np.cos(beta/2)\n",
+    "                    yC0 = yM0-h\n",
+    "                    dyC = yC-yC0\n",
+    "                    sL = np.sign(sL_list[-1])*2*R\n",
+    "                    sL_list[-1] = sL\n",
+    "                    vL = 0\n",
+    "                    _, vx, xC, vy, yC, _, _ = f(T[k], [w[0][k], w[1][k]], vx_prev, xC_prev, vy_prev, yC_prev, dyC,\n",
+    "                                                mL=0, sL=0, vL=0, kf=kf, F0=F0, omegaw=omegaw, beta_full=beta, h_step=h_size)\n",
+    "            \n",
+    "            xC_list = np.append(xC_list, [xC])\n",
+    "            yC_list = np.append(yC_list, [yC])\n",
+    "            if kantring:\n",
+    "                if abs(w[0][k])>(np.pi-2*np.arccos(np.cos(beta_full/2)-4/(3*np.pi)*(1-np.cos(w[0][k]))+dyC/R))/2:\n",
+    "                    # Ser om skipet kantrer\n",
+    "                    w = np.concatenate((w, np.array([[np.sign(w[0][i])*np.pi/2], [0]])), axis = 1)\n",
+    "                    continue\n",
+    "            w = np.concatenate((w, np.array([y1[0], y1[1]])), axis = 1)\n",
+    "            k+=1\n",
+    "        else:\n",
+    "            rejects+=1\n",
+    "        h_size = P*h_size*(tol/normest)**(1./3.)\n",
+    "    stats = {'steps' : k, 'fevals' : fevals, 'rejects' : rejects}\n",
+    "    return w, T, sL_list, xC_list, yC_list, stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "804e3b10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.01170473]\n",
+      " [0.01155143]] ---\n",
+      "[[0.         0.01170473]\n",
+      " [0.03490659 0.01155143]]\n",
+      "[[[0.01226756]]\n",
+      "\n",
+      " [[0.00885512]]] ---\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "all the input arrays must have same number of dimensions, but the array at index 0 has 2 dimension(s) and the array at index 1 has 3 dimension(s)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_11900/3684303844.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mxC\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0myC\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstats\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbogshamp\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mh_step\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbeta\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mF0\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.625\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mg\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0momegaw\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.93\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0momegaw0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'Vinkelutslag $\\theta$(t)'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mw\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m180\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr'$\\theta$(t) i grader'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m't (s)'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# Plotter\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_11900/2041517458.py\u001b[0m in \u001b[0;36mbogshamp\u001b[1;34m(w0, T_start, T_slutt, h0, tol, beta_full, kf, F0, omegaw, mL, sL, vL, vx, vy, xC, f, gjerde, kantring)\u001b[0m\n\u001b[0;32m     90\u001b[0m                     \u001b[1;32mcontinue\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     91\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'---'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 92\u001b[1;33m             \u001b[0mw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0my1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     93\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     94\u001b[0m             \u001b[0mk\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mconcatenate\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: all the input arrays must have same number of dimensions, but the array at index 0 has 2 dimension(s) and the array at index 1 has 3 dimension(s)"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "w, t, _, xC, yC, stats = bogshamp(w0, 0, 20, 0.5, h_step, beta, kf=100, F0=0.625*m*g, omegaw=0.93*omegaw0)\n",
+    "plt.title(r'Vinkelutslag $\\theta$(t)')\n",
+    "plt.plot(t, w[0]*180/np.pi)\n",
+    "plt.ylabel(r'$\\theta$(t) i grader')\n",
+    "plt.xlabel('t (s)') # Plotter\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeddff7f",
+   "id": "a8a57de6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1143,7 +1310,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
